Feat: Guess Number Game, Pomodoro++, Shop & Dialogue Fixes
- Added 'Guess the Number' mini-game (random trigger).
- Implemented Pomodoro++: Asuna reacts angrily to distractions (YouTube, Games) during work.
- Fixed 'dot bubble' dialogue bug (random.choice on string).
- Fixed Shop crash (inv_win AttributeError).
- Moved Rice to Food tab and Tomato to Health tab in Shop.
- Added localization for new features.

--- a/assets/lang/uk.json
+++ b/assets/lang/uk.json
@@ -1,21 +1,266 @@
 {
-    "emote_sad": "Я СУМУЮ...",
-    "emote_thanks": "Дякую, тепер краще! 💊✨",
-    "quest_completed": "КВЕСТ ВИКОНАНО!",
-    "ill_nausea": "Мені погано... 🤢",
-    "ill_pills": "Потрібні ліки... 💊",
-    "sys_cpu": [
-        "Ух... процесор кипить! 🔥",
-        "Мені аж жарко стало... 🥵",
-        "Комп'ютер зараз злетить! 🚀"
-    ],
-    "sys_battery": "Ей! Заряджай нас швидше! 🔋😱",
-    "sys_ram": "Ого, пам'яті зовсім немає... 😵‍💫",
-    "shop_no_money": "Брак монет!",
-    "shop_bought": "-{price} 💰",
-    "music_loaded": "Завантажено: {count} 🎵",
-    "music_empty": "Тут пусто... 😕",
-    "music_volume": "Гучність: {vol}%",
-    "chat_no_conn": "Я... не маю з'єднання з космосом (Інтернетом). 📡\n(Перевір API ключ або підключення)",
-    "food_delicious": "Смакота! 🍬"
+    "project_name": "Asuna VPet Pro",
+    "quests": {
+        "eat_sandwich": "З'їж сендвіч 🥪",
+        "eat_pizza": "Хочу піцу! 🍕",
+        "eat_sushi": "Час для суші 🍣",
+        "eat_ramen": "Гарячий рамен! 🍜",
+        "eat_chocolate": "Солодкий перекус (2 шоколадки) 🍫",
+        "eat_lollipop": "Три цукерки! 🍭",
+        "eat_donut": "Пончики до кави (2 шт) 🍩",
+        "eat_croissant": "Сніданок у Парижі (Круасан) 🥐",
+        "eat_apple": "Вітаміни (3 яблука) 🍎",
+        "eat_salad": "Здоровий обід (Салат) 🥗",
+        "eat_dragon_fruit": "Екзотика (Драгонфрут) 🐲",
+        "eat_pumpkin": "Осінній настрій (Гарбуз) 🎃",
+        "work_25": "Фокус-сесія (25 хв) 🍅",
+        "work_50": "Глибока робота (50 хв) 📚",
+        "click_10": "Погладь мене 10 разів 👋",
+        "click_50": "Масаж голови (50 кліків) 💆‍♀️",
+        "train_3": "Ранкова зарядка (3 рази) ⚔️",
+        "buy_flowers": "Купи квіти 💐",
+        "cook_any": "Хочу щось приготувати! 🍳",
+        "cook_burger": "Приготуємо бургер! 🍔",
+        "cook_cake": "Час для десерту! 🎂",
+        "cook_marathon": "Ми - шеф-кухарі! (3 страви) 👨‍🍳",
+        "eat_panna_cotta": "Ніжна Панна-котта... 🍮",
+        "buy_gummy_bear": "Купи ведмедиків (2 шт) 🐻"
+    },
+    "games": {
+        "guess_number": "Вгадай число (1-25) ✨",
+        "guess_win": "Ура! Ти вгадав! 🎉 (+30 XP)",
+        "guess_lose": "Ех... Не вгадав. Це було {number}. 😞"
+    },
+    "items": {
+        "panna-cotta": "Ніжний вершковий десерт. (+20 Hunger, +40 Happiness)",
+        "sandwich": "Смачний сендвіч з соусом. (+20 Hunger)",
+        "ball": "Червоний м'ячик для гри. (+20 Happiness)",
+        "medicine": "Ліки від застуди. (+30 Health)",
+        "chocolate": "Солодка плитка шоколаду. (+10 Hunger, +10 Happiness)",
+        "energy_drink": "Заряд бадьорості! (+40 Energy, -5 Health)",
+        "lollipop": "Смачний льодяник. (+10 Hunger, +10 Happiness)",
+        "toffee": "М'яка іриска. (+15 Hunger, +10 Happiness)",
+        "gummy-bear": "Ведмедик гаммі. (+20 Hunger, +15 Happiness)",
+        "donut": "Доцент з глазур'ю. (+10 Hunger, +5 Happiness)",
+        "candy-apple": "Яблуко в карамелі. (+30 Hunger, +20 Happiness)",
+        "croissant": "Французький круасан. (+35 Hunger, +15 Happiness)",
+        "fried-potatoes": "Смажена картопля. (+15 Hunger)",
+        "rice": "Порція білого рису. (+10 Hunger)",
+        "hot-dog": "Хот-дог з гірчицею. (+25 Hunger)",
+        "sushi": "Класичні роли. (+35 Hunger, +5 Happiness)",
+        "pasta": "Італійська паста. (+40 Hunger)",
+        "pizza": "Гаряча піца! (+45 Hunger, +10 Happiness)",
+        "ramen": "Автентичний рамен. (+55 Hunger, +10 Happiness)",
+        "blueberry": "Свіжа лохина. (+1 Health)",
+        "apple": "Стигле яблуко. (+1 Hunger, +1 Health)",
+        "tomato": "Червоний томат. (+2 Hunger, +1 Health)",
+        "banana": "Поживний банан. (+4 Hunger, +1 Health)",
+        "cucumber": "Свіжий огірок. (+1 Hunger, +1 Health)",
+        "nuts": "Мікс горіхів. (+6 Hunger, +3 Health)",
+        "pomegranate": "Стиглий гранат. (+1 Hunger, +4 Health)",
+        "dragon-fruit": "Екзотичний пітайя. (+2 Hunger, +3 Health)",
+        "pumpkin": "Золотистий гарбуз. (+3 Hunger, +6 Health)",
+        "joystick": "Ігрова консоль. (+60 Happiness)",
+        "book": "Цікава книга. (+20 Happiness, +5 XP)",
+        "flowers": "Букет квітів. (+25 Happiness)",
+        "teddy-bear": "Плюшевий ведмедик. (+50 Happiness)",
+        "sword-gift": "Декоративний меч. (+80 Happiness)",
+        "crown": "Справжня корона! (+100 Happiness)",
+        "headphones": "Музичні навушники. (+40 Happiness)",
+        "gem": "Коштовний камінь. (+50 Happiness)",
+        "magic-wand": "Магічна паличка. (+60 Happiness)",
+        "love-potion": "Любовне зілля ❤️ (+100 Happiness)",
+        "smartphone": "Сучасний смартфон. (+75 Happiness)",
+        "crystal-ball": "Магічна куля для передбачень. (+150 Happiness)",
+        "meat": "Свіже м'ясо для кулінарії.",
+        "fish": "Свіжа риба.",
+        "shrimp": "Великі креветки.",
+        "egg": "Куряче яйце.",
+        "cheese": "Шматочок сиру.",
+        "flour": "Пшеничне борошно.",
+        "milk": "Свіже молоко.",
+        "lettuce": "Лист салату.",
+        "recipe_burger": "Рецепт приготування бургера.",
+        "recipe_sushi_set": "Секрети японської кухні (Суші).",
+        "recipe_cake": "Мистецтво випікання тортів.",
+        "recipe_panna_cotta": "Вишуканий італійський десерт.",
+        "burger": "Домашній бургер. (+60 Hunger, +10 Happiness)",
+        "sushi_set": "Набір суші. (+50 Hunger, +15 Happiness)",
+        "cake": "Святковий торт! (+40 Hunger, +30 Happiness)",
+        "salad": "Легкий салат. (+30 Hunger, +5 Health)",
+        "burnt_food": "Щось пішло не так... 🤢 (+5 Hunger, -5 Health)"
+    },
+    "achievements": {
+        "level_5_name": "П'ятірка!",
+        "level_5_desc": "Досягти 5 рівня",
+        "level_10_name": "Ветеран",
+        "level_10_desc": "Досягти 10 рівня",
+        "level_20_name": "Легенда",
+        "level_20_desc": "Досягти 20 рівня",
+        "rich_name": "Мільйонер",
+        "rich_desc": "Накопичити 1000 монет",
+        "tycoon_name": "Магнат",
+        "tycoon_desc": "Накопичити 5000 монет",
+        "best_friend_name": "Найкращі друзі",
+        "best_friend_desc": "100% щастя",
+        "gamer_name": "Геймер",
+        "gamer_desc": "Зіграти в ігри 10 разів",
+        "pro_gamer_name": "Кіберспортсмен",
+        "pro_gamer_desc": "Зіграти в ігри 50 разів",
+        "worker_name": "Трудоголік",
+        "worker_desc": "Працювати 60 хв сумарно",
+        "manager_name": "Менеджер",
+        "manager_desc": "Працювати 5 годин сумарно",
+        "hoarder_name": "Колекціонер",
+        "hoarder_desc": "Мати 20 предметів в інвентарі",
+        "chef_name": "Шеф-кухар",
+        "chef_desc": "Приготувати 5 страв",
+        "gourmet_name": "Гурман",
+        "gourmet_desc": "З'їсти 10 приготованих страв",
+        "master_chef_name": "Майстер Шеф",
+        "master_chef_desc": "Приготувати 20 страв"
+    },
+    "dialogues": {
+        "greeting_morning": [
+            "Охайо! ☀️ Вже час прокидатися!",
+            "Доброго ранку! Готовий до нових звершень? 💪",
+            "Мм... Ще б 5 хвилинок... Але рада тебе бачити!",
+            "Сніданок - це важливо! Ти вже поїв? 🍳"
+        ],
+        "greeting_day": [
+            "Привіт! Як у тебе справи?",
+            "Я тут, якщо тобі потрібна компанія! 😊",
+            "Працюємо, працюємо! Але не забувай про відпочинок.",
+            "О, ти повернувся! ❤️"
+        ],
+        "greeting_evening": [
+            "Доброго вечора! Був важкий день?",
+            "Вже темніє... Час розслабитися. 🌙",
+            "Не засиджуйся надто довго за комп'ютером!",
+            "Яка гарна ніч сьогодні..."
+        ],
+        "hungry": [
+            "Ей... Мій животик бурчить... 🥪",
+            "Може перекусимо? Я б з'їла сендвіч!",
+            "Я така голодна, що не можу думати... 😵‍💫",
+            "Хочу їсти! Може рамен? 🍜",
+            "Ти ж не забув мене погодувати?",
+            "Хочеться чогось солоденького... Пончик? 🍩",
+            "Треба їсти більше вітамінів! Де мої яблука? 🍎",
+            "Може замовимо піцу? чи суші? 🍕🍣"
+        ],
+        "thirsty": [
+            "Хочеться пити... 🥤",
+            "Водички б...",
+            "Не забувай пити воду, це корисно!"
+        ],
+        "tired": [
+            "Я так втомилася...",
+            "Сил немає зовсім...",
+            "Може перерву?"
+        ],
+        "happy": [
+            "Я така щаслива поруч з тобою! ❤️",
+            "Ти найкращий! ✨",
+            "Чудовий день! Хочеться співати! 🎶",
+            "Дякую, що дбаєш про мене! 🥰",
+            "Ура!"
+        ],
+        "sad": [
+            "Мені сумно... 😢",
+            "Чому ти мене ігноруєш?",
+            "Хочеться уваги... 💔",
+            "Ех..."
+        ],
+        "idle": [
+            "Цікаво, що там у новинах?",
+            "Може зіграємо в слоти? 🎰",
+            "Я люблю спостерігати, як ти працюєш. 👀",
+            "Не забувай тримати спину рівно!",
+            "Коли ми підемо на прогулянку?"
+        ],
+        "work": [
+            "Ти зможеш! Я в тебе вірю! 🔥",
+            "Ще трошки, і відпочинемо!",
+            "Фокусуйся! Ти молодець! 🧠",
+            "Я буду сидіти тихо, не заважатиму."
+        ],
+        "work_scold": [
+            "Ей! Ми ж працюємо! 💢",
+            "Закрий це! Фокус! 😡",
+            "Я все бачу! До роботи! 👀",
+            "Ніяких ігор! Час працювати! ⏳"
+        ],
+        "sleep": [
+            "Zzz...",
+            "Мхм... ще 5 хвилинок...",
+            "...смачний сендвіч...",
+            "Хррр..."
+        ]
+    },
+    "window_reactions": {
+        "coding": [
+            "Пишемо шедевр?",
+            "Не забудь про тести!",
+            "Чистий код - запорука здоров'я!",
+            "Знайшов баг?"
+        ],
+        "browser": [
+            "Шукаєш щось цікаве?",
+            "Тільки не гугли симптоми...",
+            "Нова вкладка, нові знання!",
+            "Інтернет - це безодня."
+        ],
+        "youtube": [
+            "О, відео! Я теж хочу подивитися!",
+            "Стрім? Круто!",
+            "Сподіваюсь, це пізнавальний контент.",
+            "Попкорн брати?"
+        ],
+        "chat": [
+            "З ким переписуєшся?",
+            "Не ігноруй мене заради чату!",
+            "Привіт друзям!",
+            "Хтось написав?"
+        ],
+        "minecraft": [
+            "Будуємо будинок?",
+            "Обережно, кріпер ззаду!",
+            "В шахту підемо?",
+            "Люблю кубики!"
+        ],
+        "lol": [
+            "Тільки не тільтуй!",
+            "Пентакіл буде?",
+            "Я вболіваю за тебе!",
+            "ГГ ВП!"
+        ],
+        "tft": [
+            "Збирай золото!",
+            "Сподіваюсь, випаде легендарка.",
+            "Тільки перемога!",
+            "Яка стратегія?"
+        ],
+        "hs": [
+            "Топдекни щось гарне!",
+            "Лероооой Дженкінс!",
+            "Карти на стіл!",
+            "Обережно з маною."
+        ],
+        "music": [
+            "Гарна пісня!",
+            "Зроби гучніше!",
+            "Можна потанцювати?",
+            "Це мій улюблений трек!"
+        ]
+    },
+    "system": {
+        "shop_no_money": "Не вистачає монет! 🪙",
+        "ill_nausea": "Нудить...",
+        "ill_pills": "Треба випити ліки...",
+        "sys_cpu": "Фух, стало гаряче! Комп'ютер працює на повну! 🔥",
+        "sys_battery": "Ой, батарейка сідає! 🔋",
+        "sys_ram": "Ого, скільки всього відкрито! 🤯",
+        "emote_thanks": "Дякую! 🥰"
+    }
 }
